fixes spacing

--- a/KertesLayout/stylesheet.css
+++ b/KertesLayout/stylesheet.css
@@ -33,5 +33,9 @@ img {
 #spacecraft {
   border-style: solid;
   border-width: medium;
-  padding: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+
 }
